logout and all usersroute addtion
